--- a/Firebase/FirebaseApplication/app/src/main/res/values/strings.xml
+++ b/Firebase/FirebaseApplication/app/src/main/res/values/strings.xml
@@ -1,3 +1,17 @@
 <resources>
     <string name="app_name">FirebaseApplication</string>
+
+    // Values for the Register Spinner
+    <array name = "city">
+        <item>Manila City</item>
+        <item>Makati City</item>
+        <item>Pasay City</item>
+        <item>Quezon City</item>
+    </array>
+
+    <array name = "gender">
+        <item>Male</item>
+        <item>Female</item>
+    </array>
+
 </resources>
