updated the cities array
alphabetical list of cities in metro manila

--- a/Firebase/FirebaseApplication/app/src/main/res/values/strings.xml
+++ b/Firebase/FirebaseApplication/app/src/main/res/values/strings.xml
@@ -3,10 +3,22 @@
 
     // Values for the Register Spinner
     <array name = "city">
-        <item>Manila City</item>
-        <item>Makati City</item>
-        <item>Pasay City</item>
+        <item>Caloocan</item>
+        <item>Las Pinas</item>
+        <item>Makati</item>
+        <item>Malabon</item>
+        <item>Mandaluyong</item>
+        <item>Manila</item>
+        <item>Marikina</item>
+        <item>Muntinlupa</item>
+        <item>Navotas</item>
+        <item>Paranaque</item>
+        <item>Pasay</item>
+        <item>Pasig</item>
         <item>Quezon City</item>
+        <item>San Juan</item>
+        <item>Taguig</item>
+        <item>Valenzuela</item>
     </array>
 
     <array name = "gender">
